@@ -10,6 +10,7 @@ v.1.1 -
  * Added a new CLI argument to display a list of the currently supported image formats.
  * Added new options to allow downsizing of images to a maximum width and/or
    height before applying any other optimization.
+ * Added a new option to keep EXIF data in JPEG images (by default, it will be discarded).
 
 ---
 v.1.0 - 20/06/2018 (First public release)
